[tool.poetry]
name = "my-telegram-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "20.3"
gspread = "5.8.0"
oauth2client = "4.1.3"
pytz = "2022.7"
google-api-python-client = "2.84.0"
google-auth-httplib2 = "0.1.0"
python-dotenv = "0.21.0"
pyOpenSSL = "23.3.0"
cryptography = "41.0.7"
google-auth = "2.16.0"

[tool.poetry.scripts]
start = "bot:main"